[package]
name = "rudder-cli"
version = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }
license = { workspace = true }

[[bin]]
name = "rudder"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.45", features = ["full"] }

igd-next = { version = "0.16", features = ["aio_tokio"] }

axum = { version = "0.8", default-features = false }

rudder-extractors = { path = "../rudder-extractors" }
rudder-http-client = { path = "../rudder-http-client" }
