[package]
name = "rudder-cloudflare-worker"
version = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }
license = { workspace = true }

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
axum = { version = "0.8", default-features = false }
console_error_panic_hook = { version = "0.1" }
tower-service = "0.3"
wasm-bindgen-futures = "0.4"
worker = { version = "0.5", features = ["http"] }

rudder-extractors = { path = "../rudder-extractors" }
