[package]
name = "rudder-http-client"
version = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }
license = { workspace = true }

[lib]
name = "rudder_http_client"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["http2", "rustls-tls", "brotli", "deflate", "gzip", "json"]
